<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="3"
    android:rowCount="4" >
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:id="@+id/button1"
        android:text="@string/label_button1"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:id="@+id/button2"
        android:text="@string/label_button2"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:id="@+id/button3"
        android:text="@string/label_button3"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:id="@+id/button4"
        android:text="@string/label_button4"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:id="@+id/button5"
        android:text="@string/label_button5"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:id="@+id/button6"
        android:text="@string/label_button6"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:id="@+id/button7"
        android:text="@string/label_button7"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:id="@+id/button8"
        android:text="@string/label_button8"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:id="@+id/button9"
        android:text="@string/label_button9"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:id="@+id/buttonClear"
        android:text="@string/label_buttonClear"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:id="@+id/button0"
        android:text="@string/label_button0"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:id="@+id/buttonOK"
        android:text="@string/label_buttonOK"/>
</GridLayout>