<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/label_well_done"
        android:textColor="@color/primary"
        android:textSize="40sp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:text="@string/label_completed"
        android:id="@+id/completed"
        android:textColor="@color/primary_dark"
        android:textSize="30sp"
        android:layout_margin="20dp"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/label_correct"
        android:id="@+id/correct"
        android:textColor="@color/primary_dark"
        android:textSize="30sp"
        android:layout_margin="20dp"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/label_percentage"
        android:id="@+id/percentage"
        android:textColor="@color/accent"
        android:textSize="35sp"
        android:layout_margin="20dp"
        android:layout_weight="3"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/go_again_button"
        android:text="Go again" />
</LinearLayout>